[package]
name = "oxysite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
walkdir = "2"
log = "0.4"
pulldown-cmark = "0.9.2"
env_logger = "0.9.0"
assert-str = "0.1.0"
clap = { version = "4.0.26", features = ["derive"] }
